Fix menu and accordion titles on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,3 +29,25 @@ mat-toolbar {
   background-color: transparent !important;
 }
 
+//to display mobile menu
+@media screen and (max-width: 590px) {
+  ul {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+}
+
+//to display regular menu
+@media screen and (min-width: 591px) {
+  ul .header-nav .nav {
+    display: block;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+}
+
